# tess_exoplanet_pipeline

./: .gitignore  LICENSE  README.md  batch.py  pyproject.toml  requirements.txt  run_batman_test.py  run_bayesian_test.py  run_bayesian_test_1.py  run_period_search_only.py  run_phoebe_test.py  run_stellar_only.py  test_pymc.py
Notes/: mnras_manuscript.tex  references.bib
docs/: api.md  conf.py  examples.md  index.md  installation.md  methodology.md  notebooks.md  pipeline.md
docs/report/: ref.bib  references.bib  transit_fitting_pipeline_report.aux  transit_fitting_pipeline_report.out  transit_fitting_pipeline_report.tex  transit_fitting_pipeline_report.toc  transit_fitting_pipeline_report_1.aux  transit_fitting_pipeline_report_1.bbl  transit_fitting_pipeline_report_1.blg  transit_fitting_pipeline_report_1.out  transit_fitting_pipeline_report_1.tex  transit_fitting_pipeline_report_1.toc
examples/: run_pipeline.py
notebooks/: batch.ipynb  batch.py  interactive_analysis_walkthrough.ipynb  new.ipynb  pipeline_walkthrough.ipynb  project_overview_walkthrough.ipynb  test.ipynb
output_batman/TIC 261136679/: TIC261136679_metadata.json  TIC261136679_summary.csv  report.html
output_bayesian/TIC 261136679/: TIC261136679_metadata.json  TIC261136679_summary.csv  report.html
output_bayesian_sector_1/TIC 261136679/: TIC261136679_metadata.json  TIC261136679_summary.csv  report.html
output_bayesian_sector_all_500_2/TIC 52368076/: TIC52368076_metadata.json  TIC52368076_summary.csv  report.html
pbs_query/: run_batch.pbs  run_batch_longest_500.err  run_batch_longest_500.out  run_bayesian_test.err  run_bayesian_test.out  run_bayesian_test.pbs  run_bayesian_test_1.pbs  run_bayesian_test_all.pbs
src/tess_pipeline/: __init__.py  config.py  (+4 more)
tests/: test_batman_model.py  test_bayesian.py  test_bls.py  test_config.py  test_derived_parameters.py  test_download.py  test_gaia.py  test_nasa.py  test_phoebe_model.py  test_pipeline.py  test_preprocessing.py  test_sdss.py  test_sector_slicing.py  test_stellar.py  test_stellar_stage.py  test_tls.py  test_utils.py
(+89 files in other folders)
