[build-system]
requires = ["setuptools>=68,<82", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tess-pipeline"
version = "0.1.0"
description = "End-to-end TESS light curve analysis pipeline for exoplanet detection and characterization"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [{ name = "Siya" }]
keywords = ["astronomy", "exoplanets", "TESS", "transit", "light curve", "bayesian"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "lightkurve>=2.4",
    "astropy>=5.3",
    "astroquery>=0.4.7",
    "numpy>=1.24",
    "scipy>=1.11",
    "matplotlib>=3.7",
    "batman-package>=2.4.9",
    "pandas>=2.0",
    "transitleastsquares>=1.0.31",
    "tqdm>=4.66",
    "tomllib; python_version < '3.11'",
    "setuptools<82",
    # Bayesian inference
    "exoplanet>=0.5.4",
    "exoplanet-core>=0.3.0",
    "pymc>=5.0",
    "celerite2>=0.2.1",
    "arviz>=0.16",
    # Stellar characterization
    "isoclassify",
    # Advanced modeling (PHOEBE)
    "phoebe>=2.4",
    # Development tools
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.1",
    "mypy>=1.5",
    # Documentation
    "sphinx>=7",
    "myst-parser>=2",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
